# balance

./: .gdb_history  .gitignore  Cargo.toml  debug.sh  notes.md  openocd.gdb  openocd.sh  readobj.sh
.cargo/: config.toml
.lsp/.cache/: db.transit.json
auxiliary/: Cargo.toml
auxiliary/src/: lib.rs
original/: .gdb_history  pid-balance.hex
src/: main.rs  notes.md
